--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,23 @@ textarea.materialize-textarea:focus:not([read-only]) {
 .select-wrapper input.select-dropdown {
   color: #e0e0e0;
 }
+.dropdown-content li > a,
+.dropdown-content li > span {
+  color: white !important;
+  background-color: #868686;
+  font-size: 18px !important;
+  text-shadow: 1px 1px 2px black;
+}
+
+.white-text {
+  text-shadow: 1px 1px 2px black;
+}
+
+.select-dropdown li.disabled {
+  background-color: #868686 !important;
+}
+
+.dropdown-content li > a:hover,
+.dropdown-content li > span:hover {
+  background-color: #5f5f5f !important;
+}
